# moveit_collision_checker

./: CMakeLists.txt  README.md  package.xml
config/: jnames.yaml
data/: t6_trj_pos.csv  traektory2.csv
launch/: start.launch
src/: inspector.cpp  sender.cpp
